[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Traps/Fire/Off.png" type="Texture" id=1]
[ext_resource path="res://Assets/Traps/Fire/On (16x32).png" type="Texture" id=2]
[ext_resource path="res://Scripts/Traps/FireFlame.gd" type="Script" id=3]
[ext_resource path="res://Assets/Traps/Fire/Hit (16x32).png" type="Texture" id=4]

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "on"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 4.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 12 )

[node name="Fire" type="StaticBody2D"]
collision_layer = 16

[node name="fire" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="fire"]
position = Vector2( 0, -24 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="anim" type="AnimationPlayer" parent="fire"]
autoplay = "off"
anims/hit = SubResource( 6 )
anims/off = SubResource( 7 )
anims/on = SubResource( 3 )

[node name="collision" type="CollisionShape2D" parent="fire"]
position = Vector2( 0, -34 )
shape = SubResource( 4 )
disabled = true

[node name="start" type="Timer" parent="fire"]
wait_time = 3.0
autostart = true

[node name="stop" type="Timer" parent="fire"]
wait_time = 6.0
autostart = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 5 )

[connection signal="body_entered" from="fire" to="fire" method="_on_fire_body_entered"]
[connection signal="animation_finished" from="fire/anim" to="fire" method="_on_anim_animation_finished"]
[connection signal="timeout" from="fire/start" to="fire" method="_on_start_timeout"]
[connection signal="timeout" from="fire/stop" to="fire" method="_on_stop_timeout"]
